src/styles.css
:root {
  --navy-blue: #05445e;
  --blue-grotto: #189ab4;
  --blue-green: #75e6da;
  --baby-blue: #d4f1f4;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: helvetica, monospace, sans-serif;
  line-height: 1.5;
  height: 100vh;

  display: flex;
  flex-direction: column;
  align-items: center;

  background: #05445e;
  background: linear-gradient(0deg, var(--blue-green), rgb(255, 207, 48));
}

/* this part of code remove the x from the search input its copied form this article
https://medium.com/@rion.mrk/how-to-remove-x-icon-from-search-input-field-or-input-type-search-db3c808405fb */
/* clears the ‘X’ from Internet Explorer */
input[type="search"]::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}
input[type="search"]::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}
/* clears the ‘X’ from Chrome */
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  display: none;
}
/*  */

input[type="search"]:focus {
  outline: none;
}

input[type="search"] {
  border: none;
}

.search-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.search-bar {
  display: flex;
}

.search-btn {
  background-color: var(--blue-green);

  width: 32px;
  height: 40px;

  /* merge the search button and search input */
  border-top-right-radius: 20px;
  border-bottom-right-radius: 20px;
  border: none;
}

.search-btn:hover {
  cursor: pointer;
  color: var(--navy-blue);
}

.search {
  background-color: var(--blue-green);

  width: 400px;
  padding-left: 4px;

  /* merge the search button and search input */
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  border: none;
}

.search::placeholder {
  color: var(--navy-blue);
}

.search,
.search-btn {
  font-size: 20px;
}

.weather-container {
  display: grid;
  grid-template-rows: 1fr 1fr;
  gap: 20px;
  margin: 0 20px;

  transition: opacity 0.4s ease;
}

.weather-top,
.weather-bottom {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.weather-top {
  gap: 40px;
}

.weather-top-left {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.location {
  font-size: 60px;
}

.weather-top-right {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 20px;
}

.temp {
  white-space: nowrap;
  font-size: 5vw;
}

.weather-bottom {
  grid-template: 1fr 1fr;
  gap: 20px;
}

.weather-section {
  background-color: var(--navy-blue);
  color: var(--baby-blue);

  display: flex;
  justify-content: center;
  align-items: center;

  white-space: pre-line;
  height: 100px;
  border-radius: 28px;
}

.message-container {
  display: flex;
  flex-direction: column;
  align-items: center;

  position: absolute;
  top: 30%;
}

.weather-icon {
  visibility: hidden;
}

.change-temp-unit {
  position: absolute;
  top: 12px;
  left: 12px;

  padding: 12px;
  font-size: 20px;
  font-weight: bold;

  background-color: var(--navy-blue);
  color: var(--baby-blue);
  border: none;
  border-radius: 12px;
}

.change-temp-unit:hover {
  background-color: var(--baby-blue);
  color: var(--navy-blue);

  cursor: pointer;
}

